--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,6 @@ html, body {
     background : linear-gradient(#f16c5b, #da716e);
     padding: 12px 26px;
     display : inline-block;
-    margin-left: 18px;
 }
 .LinkedinDownload:hover {
     background : #d95f50;
@@ -162,6 +161,9 @@ a:hover {
 .NomVille {
     font-size: 15px;
 }
+.espa {
+    padding-bottom: 1%;
+}
 /* Fin Formations & Experiences */
 
 /* Projet */
@@ -170,6 +172,20 @@ a:hover {
     font-weight: 700;
     padding: 8px 12px;
     background : linear-gradient(#f16c5b, #da716e);
-    display : inline-block;
+}
+.ConteneurImageP {
+    width: 100%;
+    height: 100%;
+}
+.ConsulterCode{
+    font-size: 16px;
+    font-weight: 700;
+    padding: 12px 16px;
+    background : linear-gradient(#f16c5b, #da716e);
+}
+.bordureImgP {
+    border : 2px solid e8e8e8;
+    box-shadow : 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+    background : e8e8e8;
 }
 /* Fin Projet */
